# libudnspp

./: Makefile.am  configure-legacy  configure.ac  makefile-legacy.in  udns_XtoX.c
include/udnspp/: dnsarecord.hpp  dnscache.h  dnscontext.h  dnsquery.hpp  dnsresolver.h  dnsresolver.hpp  dnsrra4.hpp  dnsrrcommon.h
src/: Makefile.am  udns_init.c  udns_resolver.c
src/udnspp/: dnscontext.cpp  dnsgetpp.cpp  dnsmxrecord.cpp  dnsnaptrrecord.cpp  dnsptrrecord.cpp  dnsquery.cpp  dnsresolver.cpp  dnsrra4.cpp  dnssrvrecord.cpp  dnstxtrecord.cpp
vcexpress-2013/: dnsget-vcexpress-2013.vcxproj  dnsgetpp-vcexpress-2013.vcxproj  libudns-vcexpress-2013.sln  libudns-vcexpress-2013.vcxproj  libudnspp-vcexpress-2013.vcxproj
